# c-cpp-practice

./: .gitignore  README.md
docs/: CPU_OS_ABI.md  LANGUAGE_PERFORMANCE.md  asm_error_analysis.md  gitcommit_prefix.md
projects/check_2206/: CMakeLists.txt  check_protection.cpp  check_protection.hpp  main.cpp
projects/compiler_2206/: .gitignore  CMakeLists.txt  README.md
projects/compiler_2206/docs/: ARCHITECTURE.md  DEBUG.md  IMPLEMENTATION.md  SIMPLE_LANGUAGE.md
projects/compiler_2206/examples/: array_test.simple  basic_test.simple  countdown.simple  factorial.simple  for_test.simple  full_test.simple  max.simple  no_input_test.simple  power_test.simple  simple_max.simple  simple_sum.simple  string_test.simple  sum.simple
projects/compiler_2206/include/: compiler.h  interpreter.h  lexer.h  sml_vm.h  token.h
projects/compiler_2206/src/: compiler.c  interpreter.c  lexer.c  main.c  sml_vm.c
projects/compiler_2206/tests/: benchmark.c  test_compiler.c  test_framework.h  test_lexer.c  test_sml_vm.c
projects/crossword_2206/: CMakeLists.txt  board.cpp  board.h  crossword.cpp  samplewords.txt  samplewords2.txt
projects/crossword_2206/.claude/: summary.md
projects/morse_code_2206/: CMakeLists.txt
projects/morse_code_2206/include/: morse_code.hpp
projects/morse_code_2206/src/: main.cpp  morse_code.cpp
projects/poker_2206/docs/: code-modernization.md  cpp-cin-ignore.md  cpp-if-init-statement.md  cpp-optional.md  cpp-ranges-sort.md  fisher-yates-shuffle.md  poker-terminology.md
projects/poker_2206/include/: Card.h  Deck.h  Game.h  Hand.h  HandComparator.h  HandEvaluator.h  Player.h
projects/poker_2206/src/: Card.cpp  Deck.cpp  Game.cpp  Hand.cpp  HandComparator.cpp  HandEvaluator.cpp  Player.cpp  main.cpp
projects/tortoise_hare_2206/: README.md
projects/vm_2206/: CMakeLists.txt  README.md
projects/vm_2206/docs/: VM_IMPLEMENTATION.md
projects/vm_2206/include/: OpCode.h
projects/vm_2206/src/: SMLLoader.cpp
